--- a/templates/index.html
+++ b/templates/index.html
@@ -10,9 +10,9 @@
     <header class="topbar">   
     <nav class="menu">
         <div class="logo">Yandri</div>
-        <a href="/">Inicio</a>
+        <!--<a href="/">Inicio</a>
         <a href="/perfil">Perfil</a>
-        <a href="/config">Configuración</a>
+        <a href="/config">Configuración</a>-->
     </nav>
 
     <div class="user-info">
@@ -25,7 +25,12 @@
     <main class='grid-views_security'>
         <!--<h1>Dashboard</h2>-->
         <article class='item-principal item-control-frame'>
-            <div class='conte-view-frame_principal'></div>
+            <div class='conte-view-frame_principal'>
+                <div class='frame frame-1'></div>
+                <div class='frame frame-2'></div>
+                <div class='frame frame-3'></div>
+                <div class='frame frame-4'></div>
+            </div>
             <div class='conte-view-frame-deteccion'></div>
         </article>
         <aside class='item-principal'>
