feat: Cuadros de los checklist y avatar

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,9 +11,6 @@
     <header class="topbar">   
     <nav class="menu">
         <div class="logo">Yandri</div>
-        <!--<a href="/">Inicio</a>
-        <a href="/perfil">Perfil</a>
-        <a href="/config">Configuración</a>-->
     </nav>
 
     <div class="user-info">
@@ -26,19 +24,52 @@
         <!--<h1>Dashboard</h2>-->
         <article class='item-principal item-control-frame'>
             <div class='conte-view-frame_principal'>
-                <div class='frame frame-1'></div>
-                <div class='frame frame-2'></div>
-                <div class='frame frame-3'></div>
-                <div class='frame frame-4'></div>
             </div>
             <div class='conte-view-frame-deteccion'></div>
         </article>
-        <aside class='item-principal'>
-            <div class='contents'></div>
-            <div class='contents'></div>
+        <aside class='item-principal frame-deteccion-components'>
+            <div class='contents'>
+                <div>
+                    <img src='' target='Casco'>
+                    <img src='' target='guantes'>
+                    <img src='' target='guante_derecho'>
+                    <img src='' target='guante_izquierdo'>
+                    <img src='' target='botas-derecha'>
+                    <img src='' target='botas-izquierda'>
+                </div>
+                <div class='contents-check'>
+                    <h6>Nombre del avatar</h6>
+                    <ul>
+                        <li>Casco</li>
+                        <li>Chaleco</li>
+                        <li>Guantes</li>
+                        <li>Botas</li>
+                    </ul>
+                </div>
+            </div>
+            <div class='contents'>
+                <div>
+                    <img src='' target='Casco'>
+                    <img src='' target='guantes'>
+                    <img src='' target='guante_derecho'>
+                    <img src='' target='guante_izquierdo'>
+                    <img src='' target='botas-derecha'>
+                    <img src='' target='botas-izquierda'>
+                </div>
+                <div class='contents-check'>
+                    <h6>Nombre del avatar</h6>
+                    <ul>
+                        <li>Casco</li>
+                        <li>Chaleco</li>
+                        <li>Guantes</li>
+                        <li>Botas</li>
+                    </ul>
+                </div>
+            </div>
             <div class='contents'></div>
             <div class='contents'></div>
         </aside>
     </main>
 </body>
 </html>
+
