feat: muestra de avatar para ppe

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,43 +28,59 @@
             <div class='conte-view-frame-deteccion'></div>
         </article>
         <aside class='item-principal frame-deteccion-components'>
-            <div class='contents'>
-                <div>
-                    <img src='' target='Casco'>
-                    <img src='' target='guantes'>
-                    <img src='' target='guante_derecho'>
-                    <img src='' target='guante_izquierdo'>
-                    <img src='' target='botas-derecha'>
-                    <img src='' target='botas-izquierda'>
+            <div class="contents avatar-box">
+
+                <!-- AVATAR CENTRADO -->
+                <div class="avatar">
+                    <img src="/static/img/avatar_gris.svg" class="layer" data-layer="base">
+                    <img src="/static/img/casco.svg" class="layer" data-layer="casco">
+                    <img src="/static/img/gafas.svg" class="layer gafas" data-layer="gafas">
+                    <img src="/static/img/chaleco.svg" class="layer" data-layer="chaleco">
+                    <img src="/static/img/Guantes.svg" class="layer guantes" data-layer="guantes">
+                    <img src="/static/img/Botas.svg" class="layer" data-layer="botas">
                 </div>
-                <div class='contents-check'>
-                    <h6>Nombre del avatar</h6>
+
+                <!-- CHECKLIST -->
+                <div class="contents-check">
+                    <h6>Equipamiento</h6>
                     <ul>
-                        <li>Casco</li>
-                        <li>Chaleco</li>
-                        <li>Guantes</li>
-                        <li>Botas</li>
+                        <li data-part="casco">Casco</li>
+                        <li data-part="chaleco">Chaleco</li>
+                        <li data-part="guante_derecho">Guante Derecho</li>
+                        <li data-part="guante_izquierdo">Guante Izquierdo</li>
+                        <li data-part="bota_derecha">Bota Derecha</li>
+                        <li data-part="bota_izquierda">Bota Izquierda</li>
                     </ul>
                 </div>
+
             </div>
-            <div class='contents'>
-                <div>
-                    <img src='' target='Casco'>
-                    <img src='' target='guantes'>
-                    <img src='' target='guante_derecho'>
-                    <img src='' target='guante_izquierdo'>
-                    <img src='' target='botas-derecha'>
-                    <img src='' target='botas-izquierda'>
+
+
+            <div class="contents">
+
+                <!-- AVATAR CENTRADO -->
+                <div class="avatar">
+                    <img src="/static/img/avatar_gris.svg" class="layer" data-layer="base">
+                    <img src="/static/img/casco.svg" class="layer" data-layer="casco">
+                    <img src="/static/img/gafas.svg" class="layer gafas" data-layer="gafas">
+                    <img src="/static/img/chaleco.svg" class="layer" data-layer="chaleco">
+                    <img src="/static/img/Guantes.svg" class="layer guantes" data-layer="guantes">
+                    <img src="/static/img/Botas.svg" class="layer" data-layer="botas">
                 </div>
-                <div class='contents-check'>
-                    <h6>Nombre del avatar</h6>
+
+                <!-- CHECKLIST -->
+                <div class="contents-check">
+                    <h6>Equipamiento</h6>
                     <ul>
-                        <li>Casco</li>
-                        <li>Chaleco</li>
-                        <li>Guantes</li>
-                        <li>Botas</li>
+                        <li data-part="casco">Casco</li>
+                        <li data-part="chaleco">Chaleco</li>
+                        <li data-part="guante_derecho">Guante Derecho</li>
+                        <li data-part="guante_izquierdo">Guante Izquierdo</li>
+                        <li data-part="bota_derecha">Bota Derecha</li>
+                        <li data-part="bota_izquierda">Bota Izquierda</li>
                     </ul>
                 </div>
+
             </div>
             <div class='contents'></div>
             <div class='contents'></div>
