--- a/static/style.css
+++ b/static/style.css
@@ -127,11 +127,11 @@ header.topbar{
     gap: 1rem;
 /*    border: solid 0.5px white;*/
 }
-
+/*
 .item-principal .contents{
     border: 5px solid white;
 }
-
++/
 /* PANEL CÁMARA */
 .conte-view-frame_principal{
     display: grid;
@@ -314,13 +314,19 @@ header.topbar{
 }
 
 .frame-deteccion-components .contents{
-    border-radius: 0.9rem;
-    border: 1px solid rgba(148,163,184,0.4);
-    padding: 0.7rem;
-    display: flex;
-    gap: 0.8rem;
-    background: rgba(15,23,42,0.95);
+    border: none;
+    background: transparent;
+    padding: 0; /* opcional */
 }
+
+
+.contents.avatar-box {
+    border: none !important;
+    background: transparent !important;
+    padding: 0 !important;
+}
+
+
 
 /* 1: Cara + info */
 .contents-face{
@@ -351,19 +357,76 @@ header.topbar{
 }
 
 .item-principal .contents div{
-    border: solid;
+    /*border: solid;*/
     width: 100%;
 }
 
 .item-principal .contents .contents-check{
     text-align: center;
-    border: solid white;
+    /*border: solid white;*/
 }
 
 .item-principal .contents .contents-check ul li{
     list-style-type: none;
 
 }
+
+
+.contents {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    border: none;
+}
+
+/* Tamaño del avatar */
+.avatar {
+    position: relative;
+    width: 200px;       /* tamaño visual del avatar */
+    height: 200px;      /* mismo de ancho/alto */
+    margin: 0 auto;     /* centra si está dentro de un div */
+    border: none;
+    overflow: hidden;
+    border: none;
+}
+
+/* Todas las capas se superponen exactamente en la misma posición */
+.avatar .layer {
+    position: absolute;
+    border: none;
+    top: 0;
+    left: 0;
+    width: 100%;        /* se adaptan al contenedor */
+    height: 100%;       /* se ajustan correctamente */
+    pointer-events: none;
+    align-items: center;
+    justify-content: center;
+    object-fit: contain;  
+    pointer-events: none;
+}
+
+.avatar .gafas {
+    width: 15%;
+    height: auto;
+    top: 16%;       /* mueve hacia abajo */
+    left: 47.5%;      /* punto de referencia al centro */
+    transform: translateX(-50%); /* centra horizontalmente */
+}
+
+.avatar .guantes {
+    width: 45.5%;
+    height: auto;
+    top: 47.5%;       /* baja más, hacia las manos */
+    left: 48%;
+    transform: translateX(-50%);
+}
+
+
+.avatar img{
+    border: none;
+}
+
 
 
 
